fix intro spacing

--- a/styles/sections/intro.scss
+++ b/styles/sections/intro.scss
@@ -1,3 +1,4 @@
 .intro {
+  padding-top: 64px;
   font-size: 32px;
 }
